--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ Language/Binaries
 Language/Diagnosis
 Language/Temp/Objects/
 Language/Temp/Transfer/
+Language/Temp/Transfer/Config1
 Language/Temp/Simulation/
 LoggerData
 
